--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -184,7 +184,7 @@
                 <td>{{personnes[i].username}}</td>
                 <td>{{personnes[i].password}}</td>
                 <!-- <td>{{roles[i].libelleRole}}</td> -->
-                <td><button (click)="editUser(p)">Modifier</button></td>
+                <td><button class="btn pull-right" (click)="editUser(p)">Modifier</button></td>
                 <td><button class="btn btn-danger pull-right" (click)="delete(p.id)">Supprimer le compte ?</button></td>
 
               </tr>
