--- a/src/app/pages/profil/profil.component.html
+++ b/src/app/pages/profil/profil.component.html
@@ -1,7 +1,7 @@
 <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center"
-  style="min-height: 600px; background-image: url(assets/img/theme/profile-cover.jpg); background-size: cover; background-position: center top;">
+  style="min-height: 600px; background-image: url(assets/img/theme/pexels-vlada-karpovich-4050315.jpg); background-size: cover; background-position: center top;background-attachment:fixed">
   <!-- Mask -->
-  <span class="mask bg-gradient-danger opacity-8"></span>
+  <span class="mask bg-gradient-primary opacity-4"></span>
   <!-- Header container -->
   <div class="container-fluid d-flex align-items-center">
     <div class="row">
@@ -22,7 +22,7 @@
           <div class="col-lg-3 order-lg-2">
             <div class="card-profile-image">
               <a href="javascript:void(0)">
-                <img src="assets/img/theme/team-4-800x800.jpg" class="rounded-circle">
+                <img src="assets/img/theme/blank-profile-picture-973460_1280-1-300x300.png" class="rounded-circle">
               </a>
             </div>
           </div>
