--- a/src/app/pages/eval-quest/eval-quest.component.html
+++ b/src/app/pages/eval-quest/eval-quest.component.html
@@ -1,6 +1,8 @@
 <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center"
   style="min-height: 600px; background-image: url(assets/img/theme/pexels-pixabay-356079.jpg); background-size: cover; background-position: -75%;background-attachment:fixed">
- <div class="container-fluid">
+ <!-- Mask -->
+ <span class="mask bg-gradient-success opacity-4"></span>
+  <div class="container-fluid">
     <div class="header-body">
     </div>
   </div>
