--- a/src/app/pages/icons/icons.component.html
+++ b/src/app/pages/icons/icons.component.html
@@ -1,5 +1,7 @@
 <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center"
   style="min-height: 600px; background-image: url(assets/img/theme/pexels-fauxels-3184328.jpg); background-size: cover; background-position: center top;background-attachment:fixed">
+  <!-- Mask -->
+  <span class="mask bg-gradient-primary opacity-4"></span>
   <div class="container-fluid">
     <div class="header-body">
       <!-- Card stats -->
