--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,8 @@
 <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center"
   style="min-height: 600px; background-image: url(assets/img/theme/pexels-christina-morillo-1181346.jpg); background-size: cover; background-position: -75%;background-attachment:fixed">
- <div class="container-fluid">
+  <!-- Mask -->
+  <span class="mask bg-gradient-primary opacity-4"></span>
+  <div class="container-fluid">
     <div class="header-body">
     </div>
   </div>
