--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,10 +1,16 @@
-<div class="header bg-gradient-danger py-7 py-lg-8">
+<div class="header py-7 py-lg-8"
+  style="min-height: 600px; background-image: url(assets/img/theme/pexels-matthis-2305098.jpg); background-size: cover; background-position: center top;background-attachment:fixed">
+  <!-- Mask -->
+  <span class="mask bg-gradient-secondary opacity-4"></span>
   <div class="container">
     <div class="header-body text-center mb-7">
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-6">
-          <h1 class="text-white">Welcome!</h1>
-          <p class="text-lead text-light">Use these awesome forms to login or create new account in your project for free.</p>
+          <h1 class="text-white display-1 bg-primary">Bonjour !</h1>
+          <div class="alert alert-default text-lead text-light font-weight-bold" role="alert">
+            <strong>Bienvenue sur la plateforme E-University, votre université digitale !</strong>
+        </div>
+        
         </div>
       </div>
     </div>
@@ -21,61 +27,69 @@
   <div class="row justify-content-center">
     <div class="col-lg-6 col-md-8">
       <div class="card bg-secondary shadow border-0">
-        <div class="card-header bg-transparent pb-5">
-          <div class="text-muted text-center mt-2 mb-4"><small>Sign up with</small></div>
-          <div class="text-center">
-            <a href="javascript:void(0)" class="btn btn-neutral btn-icon mr-4">
-              <span class="btn-inner--icon"><img src="assets/img/icons/common/github.svg"></span>
-              <span class="btn-inner--text">Github</span>
-            </a>
-            <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
-              <span class="btn-inner--icon"><img src="assets/img/icons/common/google.svg"></span>
-              <span class="btn-inner--text">Google</span>
-            </a>
-          </div>
+        <!--
+      <div class="card-header bg-transparent pb-5">
+        <div class="text-muted text-center mt-2 mb-4"><small>Sign up with</small></div>
+        <div class="text-center">
+          <a href="javascript:void(0)" class="btn btn-neutral btn-icon mr-4">
+            <span class="btn-inner--icon"><img src="assets/img/icons/common/github.svg"></span>
+            <span class="btn-inner--text">Github</span>
+          </a>
+          <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
+            <span class="btn-inner--icon"><img src="assets/img/icons/common/google.svg"></span>
+            <span class="btn-inner--text">Google</span>
+          </a>
         </div>
+      </div>
+    -->
+
         <div class="card-body px-lg-5 py-lg-5">
-          <div class="text-center text-muted mb-4">
-            <small>Or sign up with credentials</small>
-          </div>
-          <form role="form">
+        <div class="text-center text-muted mb-4">
+          <p>Connexion</p>
+        </div>
+          <form>
             <div class="form-group">
               <div class="input-group input-group-alternative mb-3">
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                 </div>
-                <input class="form-control" placeholder="Name" type="text">
+                <input class="form-control" placeholder="Username" type="text" name="username">
               </div>
             </div>
-            <div class="form-group">
-              <div class="input-group input-group-alternative mb-3">
-                <div class="input-group-prepend">
-                  <span class="input-group-text"><i class="ni ni-email-83"></i></span>
-                </div>
-                <input class="form-control" placeholder="Email" type="email">
+            <!--
+          <div class="form-group">
+            <div class="input-group input-group-alternative mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text"><i class="ni ni-email-83"></i></span>
               </div>
+              <input class="form-control" placeholder="Email" type="email">
             </div>
+          </div>
+          -->
             <div class="form-group">
               <div class="input-group input-group-alternative">
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                 </div>
-                <input class="form-control" placeholder="Password" type="password">
+                <input class="form-control" placeholder="Password" type="password" name="password">
               </div>
             </div>
-            <div class="text-muted font-italic"><small>password strength: <span class="text-success font-weight-700">strong</span></small></div>
-            <div class="row my-4">
-              <div class="col-12">
-                <div class="custom-control custom-control-alternative custom-checkbox">
-                  <input class="custom-control-input" id="customCheckRegister" type="checkbox">
-                  <label class="custom-control-label" for="customCheckRegister">
-                    <span class="text-muted">I agree with the <a href="#!">Privacy Policy</a></span>
-                  </label>
-                </div>
+            <!--
+          <div class="text-muted font-italic"><small>password strength: <span class="text-success font-weight-700">strong</span></small></div>
+          <div class="row my-4">
+           
+            <div class="col-12">
+              <div class="custom-control custom-control-alternative custom-checkbox">
+                <input class="custom-control-input" id="customCheckRegister" type="checkbox">
+                <label class="custom-control-label" for="customCheckRegister">
+                  <span class="text-muted">I agree with the <a href="#!">Privacy Policy</a></span>
+                </label>
               </div>
             </div>
+          </div>
+            -->
             <div class="text-center">
-              <button type="button" class="btn btn-primary mt-4">Create account</button>
+              <button class="btn btn-primary mt-4">Se connecter</button>
             </div>
           </form>
         </div>
