--- a/src/app/pages/tables/tables.component.html
+++ b/src/app/pages/tables/tables.component.html
@@ -1,6 +1,8 @@
 <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center"
   style="min-height: 600px; background-image: url(assets/img/theme/pexels-pixabay-356065.jpg); background-size: cover; background-position: center top; background-attachment:fixed">
-   <div class="container-fluid">
+  <!-- Mask -->
+  <span class="mask bg-gradient-primary opacity-4"></span> 
+  <div class="container-fluid">
     <div class="header-body">
     </div>
   </div>
