--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -1,5 +1,7 @@
 <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center"
   style="min-height: 600px; background-image: url(assets/img/theme/pexels-pixabay-256490.jpg); background-size: cover; background-position: -75%;background-attachment:fixed">
+  <!-- Mask -->
+  <span class="mask bg-gradient-primary opacity-4"></span>
   <div class="container-fluid">
     <div class="header-body">
     </div>
