--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -4,7 +4,12 @@
   <!-- Top navbar -->
   <app-navbar></app-navbar>
   <!-- Pages -->
+  <div [hidden]="!authenticated()">
   <router-outlet></router-outlet>
+</div>
+<div [hidden]="authenticated()">
+  <p>Connectez-vous pour afficher le contenu de cette page</p>
+</div>
   <div class="container-fluid">
     <app-footer></app-footer>
   </div>
