--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -9,8 +9,8 @@
           <h1 class="text-white display-1 bg-primary">Bonjour !</h1>
           <div class="alert alert-default text-lead text-light font-weight-bold" role="alert">
             <strong>Bienvenue sur la plateforme E-University, votre université digitale !</strong>
-        </div>
-        
+          </div>
+
         </div>
       </div>
     </div>
@@ -44,50 +44,50 @@
     -->
 
         <div class="card-body px-lg-5 py-lg-5">
-        <div class="text-center text-muted mb-4">
-          <p>Connexion</p>
-        </div>
-          <form>
+          <div class="text-center text-muted mb-4">
+            <p>Connexion</p>
+          </div>
+          <form (submit)="login()">
             <div class="form-group">
               <div class="input-group input-group-alternative mb-3">
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                 </div>
-                <input class="form-control" placeholder="Username" type="text" name="username">
+                <input class="form-control" [(ngModel)]="credentials.username" placeholder="Username" type="text" name="username">
               </div>
             </div>
             <!--
-          <div class="form-group">
-            <div class="input-group input-group-alternative mb-3">
-              <div class="input-group-prepend">
-                <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+            <div class="form-group">
+              <div class="input-group input-group-alternative mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+                </div>
+                <input class="form-control" placeholder="Email" type="email">
               </div>
-              <input class="form-control" placeholder="Email" type="email">
             </div>
-          </div>
-          -->
+            -->
             <div class="form-group">
               <div class="input-group input-group-alternative">
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                 </div>
-                <input class="form-control" placeholder="Password" type="password" name="password">
+                <input class="form-control" placeholder="Password" type="password" [(ngModel)]="credentials.password" name="password">
               </div>
             </div>
-            <!--
-          <div class="text-muted font-italic"><small>password strength: <span class="text-success font-weight-700">strong</span></small></div>
-          <div class="row my-4">
-           
-            <div class="col-12">
-              <div class="custom-control custom-control-alternative custom-checkbox">
-                <input class="custom-control-input" id="customCheckRegister" type="checkbox">
-                <label class="custom-control-label" for="customCheckRegister">
-                  <span class="text-muted">I agree with the <a href="#!">Privacy Policy</a></span>
-                </label>
+             <!--
+            <div class="text-muted font-italic"><small>password strength: <span class="text-success font-weight-700">strong</span></small></div>
+            <div class="row my-4">
+             
+              <div class="col-12">
+                <div class="custom-control custom-control-alternative custom-checkbox">
+                  <input class="custom-control-input" id="customCheckRegister" type="checkbox">
+                  <label class="custom-control-label" for="customCheckRegister">
+                    <span class="text-muted">I agree with the <a href="#!">Privacy Policy</a></span>
+                  </label>
+                </div>
               </div>
             </div>
-          </div>
-            -->
+              -->
             <div class="text-center">
               <button class="btn btn-primary mt-4">Se connecter</button>
             </div>
