--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -6,18 +6,11 @@
     <div class="header-body text-center mb-7">
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-6">
-<<<<<<< HEAD
           <h1 class="text-white display-1 bg-primary">Bonjour !</h1>
           <div class="alert alert-default text-lead text-light font-weight-bold" role="alert">
             <strong>Bienvenue sur la plateforme E-University, votre université digitale !</strong>
           </div>
 
-=======
-          <h1 class="text-white">Bonjour !</h1>
-          <p class="text-lead text-light">Bienvenue sur la plateforme E-University, votre université digitale.
-            Pour accéder aux fonctionnalités de l'application veuillez vous connecter !
-          </p>
->>>>>>> frontSecurity
         </div>
       </div>
     </div>
@@ -35,7 +28,6 @@
     <div class="col-lg-6 col-md-8">
       <div class="card bg-secondary shadow border-0">
         <!--
-<<<<<<< HEAD
       <div class="card-header bg-transparent pb-5">
         <div class="text-muted text-center mt-2 mb-4"><small>Sign up with</small></div>
         <div class="text-center">
@@ -51,39 +43,20 @@
       </div>
     -->
 
-=======
-        <div class="card-header bg-transparent pb-5">
-          <div class="text-muted text-center mt-2 mb-4"><small>Sign up with</small></div>
-          <div class="text-center">
-            <a href="javascript:void(0)" class="btn btn-neutral btn-icon mr-4">
-              <span class="btn-inner--icon"><img src="assets/img/icons/common/github.svg"></span>
-              <span class="btn-inner--text">Github</span>
-            </a>
-            <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
-              <span class="btn-inner--icon"><img src="assets/img/icons/common/google.svg"></span>
-              <span class="btn-inner--text">Google</span>
-            </a>
-          </div>
-        </div>
-      -->
-        
->>>>>>> frontSecurity
         <div class="card-body px-lg-5 py-lg-5">
           <!--
           <div class="text-center text-muted mb-4">
             <p>Connexion</p>
           </div>
-<<<<<<< HEAD
-=======
             -->
->>>>>>> frontSecurity
           <form (submit)="login()">
             <div class="form-group">
               <div class="input-group input-group-alternative mb-3">
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                 </div>
-                <input class="form-control" [(ngModel)]="credentials.username" placeholder="Username" type="text" name="username">
+                <input class="form-control" [(ngModel)]="credentials.username" placeholder="Username" type="text"
+                  name="username">
               </div>
             </div>
             <!--
@@ -101,10 +74,11 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                 </div>
-                <input class="form-control" placeholder="Password" type="password" [(ngModel)]="credentials.password" name="password">
+                <input class="form-control" placeholder="Password" type="password" [(ngModel)]="credentials.password"
+                  name="password">
               </div>
             </div>
-             <!--
+            <!--
             <div class="text-muted font-italic"><small>password strength: <span class="text-success font-weight-700">strong</span></small></div>
             <div class="row my-4">
              
