--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center"
   style="min-height: 600px; background-image: url(assets/img/theme/pexels-pixabay-256490.jpg); background-size: cover; background-position: -75%;background-attachment:fixed">
   <!-- Mask -->
@@ -6,161 +5,9 @@
   <div class="container-fluid">
     <div class="header-body">
     </div>
-=======
-<div class="header bg-gradient-danger pb-8 pt-5 pt-md-8">
-  <div class="container-fluid">
-    <div class="header-body">
-    </div>
   </div>
 </div>
 
-<div class="card" style="width: 80%;">
-  <div class="card-body">
-    <h1 class="card-title">Ajouter un compte</h1>
-    <form (ngSubmit)="save()">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form-group">
-            <input type="text" placeholder="Numero du compte" [(ngModel)]="compte.numeroCompte" name ="numeroCompte">
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form-group">
-            <input type="text" placeholder="Statut" [(ngModel)]="compte.statut" name ="statut">
-          </div>
-        </div>
-      </div>
-      <h2 class="card-title">Ajouter un role</h2>
-                <td>
-                    <select multiple name="roles" [(ngModel)]="personne.roles">
-                        <option *ngFor="let r of roles" [ngValue]="r">
-                            {{r.libelleRole}}
-                        </option>
-                    </select>
-                </td>
-                <br>
-      <h2 class="card-title">Ajouter une academie</h2>
-                <td>
-                    <select multiple name="academies" [(ngModel)]="academie.nomAcademie">
-                        <option *ngFor="let ac of academies" [ngValue]="ac">
-                            {{ac.nomAcademie}}
-                        </option>
-                    </select>
-                </td>
-                <br>
-       <h2 class="card-title">Ajouter une Universite</h2>
-                <td>
-                    <select multiple name="universites" [(ngModel)]="universite.nomUniversite">
-                        <option *ngFor="let uni of universites" [ngValue]="uni">
-                            {{uni.nomUniversite}}
-                        </option>
-                    </select>
-                </td>
-                <br>
-        <h2 class="card-title">Ajouter un centre de recherche</h2>
-                <td>
-                    <select multiple name="centreDeRecherches" [(ngModel)]="centreDeRecherche.nomCentreDeRecherche">
-                        <option *ngFor="let cdr of centreDeRecherches" [ngValue]="cdr">
-                            {{cdr.nomCentreDeRecherche}}
-                        </option>
-                    </select>
-                </td>
-                <br> 
-      <h2 class="card-title">Ajouter une section</h2>
-                <td>
-                    <select multiple name="sections" [(ngModel)]="section.nomSection">
-                        <option *ngFor="let sec of sections" [ngValue]="sec">
-                            {{sec.nomSection}}
-                        </option>
-                    </select>
-                </td>
-                <br>
-      <h2 class="card-title">Ajouter une formation</h2>
-              <h4 class="card-title">Unité d'enseignement</h4>
-                <td>
-                    <select multiple name="formations" [(ngModel)]="formation.titreFormation">
-                        <option *ngFor="let fo of formations" [ngValue]="fo">
-                            {{fo.titreFormation}}
-                        </option>
-                    </select>
-               <!-- <h4 class="card-title">Grade</h4>
-                    <select multiple name="formations" [(ngModel)]="formation.titreFormation">
-                    <option *ngFor="let fo of formations" [ngValue]="fo">
-                           {{fo.gradeFormation}}
-                    </option>
-                    </select>-->
-                </td>
-                <br>   
-
-      <h2 class="card-title">Coordonnées de l'utilisateur</h2>     
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form-group">
-            <input type="text" placeholder="Nom" [(ngModel)]="personne.nom" name ="nom">
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form-group">
-            <input type="text" placeholder="Prenom" [(ngModel)]="personne.prenom" name ="prenom">
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form-group">
-            <input type="Date" placeholder="Date de naissance" [(ngModel)]="personne.dateNaissance" name ="dateNaissance">
-          </div>
-        </div>
-      </div>
-      
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form-group">
-            <input type="text" placeholder="Email" [(ngModel)]="personne.email" name ="email">
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form-group">
-            <input type="text" placeholder="Numéro de téléphone" [(ngModel)]="personne.numeroTel" name ="numeroTel">
-          </div>
-        </div>
-      </div>
-     
-      <!--<div class="row">
-        <div class="col-md-6">
-          <div class="form-group">
-            <input type="text" placeholder="Adresse" [(ngModel)]="personne.rue" name ="rue">
-          </div>
-        </div>
-      </div>-->
-
-
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form-group">
-            <input type="text" placeholder="Identifiant" [(ngModel)]="personne.username" name ="username">
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form-group">
-            <input type="text" placeholder="Mot de passe" [(ngModel)]="personne.password" name ="password">
-          </div>
-        </div>
-      </div>
-      <button class="btn btn-primary" type="submit">Ajouter un nouveau compte</button>
-      <div class="clearfix"></div>
-    </form>
->>>>>>> frontSecurity
-  </div>
-</div>
 <!-- Page content -->
 <div class="container-fluid mt-5">
   <!-- Formulaires questions -->
@@ -170,7 +17,8 @@
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
-          <input class="form-control" type="text" placeholder="Numero du compte" id="exampleFormControlInput1" [(ngModel)]="compte.numeroCompte" name="numeroCompte">
+          <input class="form-control" type="text" placeholder="Numero du compte" id="exampleFormControlInput1"
+            [(ngModel)]="compte.numeroCompte" name="numeroCompte">
         </div>
       </div>
       <!--
@@ -189,7 +37,7 @@
       <div class="col-md-6">
         <div class="form-group">
           <label for="">Rôle</label>
-          <select class="custom-select"  name="roles" [(ngModel)]="personne.roles">
+          <select class="custom-select" name="roles" [(ngModel)]="personne.roles">
             <option *ngFor="let r of roles" [ngValue]="r">
               {{r.libelleRole}}
             </option>
@@ -199,7 +47,7 @@
       <div class="col-md-6">
         <div class="form-group">
           <label for="">Académie</label>
-          <select class="custom-select"  name="academies" [(ngModel)]="academie.nomAcademie">
+          <select class="custom-select" name="academies" [(ngModel)]="academie.nomAcademie">
             <option *ngFor="let ac of academies" [ngValue]="ac">
               {{ac.nomAcademie}}
             </option>
@@ -211,7 +59,7 @@
       <div class="col-md-6">
         <div class="form-group">
           <label for="">Université</label>
-          <select class="custom-select"  name="universites" [(ngModel)]="universite.nomUniversite">
+          <select class="custom-select" name="universites" [(ngModel)]="universite.nomUniversite">
             <option *ngFor="let uni of universites" [ngValue]="uni">
               {{uni.nomUniversite}}
             </option>
@@ -221,7 +69,7 @@
       <div class="col-md-6">
         <div class="form-group">
           <label for="">Centre de recherche</label>
-          <select class="custom-select"  name="centreDeRecherches" [(ngModel)]="centreDeRecherche.nomCentreDeRecherche">
+          <select class="custom-select" name="centreDeRecherches" [(ngModel)]="centreDeRecherche.nomCentreDeRecherche">
             <option *ngFor="let cdr of centreDeRecherches" [ngValue]="cdr">
               {{cdr.nomCentreDeRecherche}}
             </option>
@@ -233,7 +81,7 @@
       <div class="col-md-6">
         <div class="form-group">
           <label for="">Section</label>
-          <select class="custom-select"  name="sections" [(ngModel)]="section.nomSection">
+          <select class="custom-select" name="sections" [(ngModel)]="section.nomSection">
             <option *ngFor="let sec of sections" [ngValue]="sec">
               {{sec.nomSection}}
             </option>
@@ -243,7 +91,7 @@
       <div class="col-md-6">
         <div class="form-group">
           <label for="">Titre de la formation</label>
-          <select class="custom-select"  name="formations" [(ngModel)]="formation.titreFormation">
+          <select class="custom-select" name="formations" [(ngModel)]="formation.titreFormation">
             <option *ngFor="let fo of formations" [ngValue]="fo">
               {{fo.titreFormation}}
             </option>
@@ -267,7 +115,8 @@
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
-          <input class="form-control" type="Date" placeholder="Date de naissance" [(ngModel)]="personne.dateNaissance" name="dateNaissance">
+          <input class="form-control" type="Date" placeholder="Date de naissance" [(ngModel)]="personne.dateNaissance"
+            name="dateNaissance">
         </div>
       </div>
       <div class="col-md-6">
@@ -279,19 +128,22 @@
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
-          <input class="form-control" type="text" placeholder="Numéro de téléphone" [(ngModel)]="personne.numeroTel" name="numeroTel">
+          <input class="form-control" type="text" placeholder="Numéro de téléphone" [(ngModel)]="personne.numeroTel"
+            name="numeroTel">
         </div>
       </div>
       <div class="col-md-6">
         <div class="form-group">
-          <input class="form-control" type="text" placeholder="Identifiant" [(ngModel)]="personne.username" name="username">
+          <input class="form-control" type="text" placeholder="Identifiant" [(ngModel)]="personne.username"
+            name="username">
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
-          <input class="form-control" type="text" placeholder="Mot de passe" [(ngModel)]="personne.password" name="password">
+          <input class="form-control" type="text" placeholder="Mot de passe" [(ngModel)]="personne.password"
+            name="password">
         </div>
       </div>
     </div>
