--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -26,29 +26,8 @@
   <!-- Table -->
   <div class="row justify-content-center">
     <div class="col-lg-6 col-md-8">
-      <div class="card bg-secondary shadow border-0">
-        <!--
-      <div class="card-header bg-transparent pb-5">
-        <div class="text-muted text-center mt-2 mb-4"><small>Sign up with</small></div>
-        <div class="text-center">
-          <a href="javascript:void(0)" class="btn btn-neutral btn-icon mr-4">
-            <span class="btn-inner--icon"><img src="assets/img/icons/common/github.svg"></span>
-            <span class="btn-inner--text">Github</span>
-          </a>
-          <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
-            <span class="btn-inner--icon"><img src="assets/img/icons/common/google.svg"></span>
-            <span class="btn-inner--text">Google</span>
-          </a>
-        </div>
-      </div>
-    -->
-
+      <div class="card bg-secondary shadow border-0" [hidden]="authenticated()">
         <div class="card-body px-lg-5 py-lg-5">
-          <!--
-          <div class="text-center text-muted mb-4">
-            <p>Connexion</p>
-          </div>
-            -->
           <form (submit)="login()">
             <div class="form-group">
               <div class="input-group input-group-alternative mb-3">
@@ -59,16 +38,6 @@
                   name="username">
               </div>
             </div>
-            <!--
-            <div class="form-group">
-              <div class="input-group input-group-alternative mb-3">
-                <div class="input-group-prepend">
-                  <span class="input-group-text"><i class="ni ni-email-83"></i></span>
-                </div>
-                <input class="form-control" placeholder="Email" type="email">
-              </div>
-            </div>
-            -->
             <div class="form-group">
               <div class="input-group input-group-alternative">
                 <div class="input-group-prepend">
@@ -78,25 +47,15 @@
                   name="password">
               </div>
             </div>
-            <!--
-            <div class="text-muted font-italic"><small>password strength: <span class="text-success font-weight-700">strong</span></small></div>
-            <div class="row my-4">
-             
-              <div class="col-12">
-                <div class="custom-control custom-control-alternative custom-checkbox">
-                  <input class="custom-control-input" id="customCheckRegister" type="checkbox">
-                  <label class="custom-control-label" for="customCheckRegister">
-                    <span class="text-muted">I agree with the <a href="#!">Privacy Policy</a></span>
-                  </label>
-                </div>
-              </div>
-            </div>
-              -->
             <div class="text-center">
               <button class="btn btn-primary mt-4">Se connecter</button>
             </div>
           </form>
         </div>
+      </div>
+      <div class="alert alert-success" role="alert" [hidden]="!authenticated()">
+        <strong>Vous êtes connecté !</strong> Cliquez <a href="http://localhost:4200/logout"><strong>ICI</strong></a>
+        pour vous déconnecter.
       </div>
     </div>
   </div>
