--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -37,7 +37,7 @@
       <div class="col-md-6">
         <div class="form-group">
           <label for="">Rôle</label>
-          <select class="custom-select" name="roles" [(ngModel)]="personne.roles">
+          <select multiple class="custom-select" name="roles" [(ngModel)]="personne.roles">
             <option *ngFor="let r of roles" [ngValue]="r">
               {{r.libelleRole}}
             </option>
