--- a/src/app/pages/profil/profil.component.html
+++ b/src/app/pages/profil/profil.component.html
@@ -7,7 +7,7 @@
   <div class="container-fluid d-flex align-items-center">
     <div class="row">
       <div class="col-lg-7 col-md-10">
-        <h1 class="display-2 text-white">Nom utilisateur connecté</h1>
+        <h1 class="display-2 text-white">{{personne.prenom}} {{personne.nom}}</h1>
         <p class="text-white mt-0 mb-5">Retrouvez les informations relatives à votre formations, vos cours ainsi que vos
           données personnelles.</p>
         <!--<a href="#!" class="btn btn-info">Edit profile</a>-->
@@ -39,15 +39,15 @@
             <div class="col">
               <div class="card-profile-stats d-flex justify-content-center mt-md-5">
                 <div>
-                  <span class="heading">22</span>
+                  <span class="heading"></span>
                   <span class="description">Examens</span>
                 </div>
                 <div>
-                  <span class="heading">10</span>
+                  <span class="heading"></span>
                   <span class="description">Questions</span>
                 </div>
                 <div>
-                  <span class="heading">89</span>
+                  <span class="heading"></span>
                   <span class="description">Evaluations</span>
                 </div>
               </div>
@@ -55,13 +55,13 @@
           </div>
           <div class="text-center">
             <h3>
-              Prénom Nom<span class="font-weight-light">, Age</span>
+              {{personne.prenom}} {{personne.nom}}<span class="font-weight-light"></span>
             </h3>
             <!--<div class="h5 font-weight-300">
                 <i class="ni location_pin mr-2"></i>Bucharest, Romania
               </div>-->
             <div class="h5 mt-4">
-              <i class="ni business_briefcase-24 mr-2"></i>Role - Etudiant/Professeur en ...
+              <i class="ni business_briefcase-24 mr-2"></i>Role - 
             </div>
             <div>
               <i class="ni education_hat mr-2"></i>Nom université
@@ -96,14 +96,14 @@
                   <div class="form-group">
                     <label class="form-control-label" for="input-username">Username</label>
                     <input type="text" id="input-username" class="form-control form-control-alternative"
-                      placeholder="Username" value="" disabled>
+                      placeholder="{{personne.username}}" value="" disabled>
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-email">Email</label>
                     <input type="email" id="input-email" class="form-control form-control-alternative"
-                      placeholder="email@example.com" disabled>
+                      placeholder="{{personne.email}}" disabled>
                   </div>
                 </div>
               </div>
@@ -112,14 +112,14 @@
                   <div class="form-group">
                     <label class="form-control-label" for="input-first-name">Prénom</label>
                     <input type="text" id="input-first-name" class="form-control form-control-alternative"
-                      placeholder="Prénom" value="" disabled>
+                      placeholder="{{personne.prenom}}" value="" disabled>
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-last-name">Nom de famille</label>
                     <input type="text" id="input-last-name" class="form-control form-control-alternative"
-                      placeholder="Nom" value="" disabled>
+                      placeholder="{{personne.nom}}" value="" disabled>
                   </div>
                 </div>
               </div>
