--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -23,7 +23,7 @@
               <img alt="Image placeholder" src="assets/img/theme/blank-profile-picture-973460_1280-1-300x300.png">
             </span>
             <div class="media-body ml-2 d-none d-lg-block">
-              <span class="mb-0 text-sm  font-weight-bold">Utilisateur</span>
+              <span class="mb-0 text-sm  font-weight-bold">{{personne.username}}</span>
             </div>
           </div>
         </a>
