hidden question dans question & evaluation

--- a/src/app/pages/eval-quest/eval-quest.component.html
+++ b/src/app/pages/eval-quest/eval-quest.component.html
@@ -126,7 +126,7 @@
     </div>
   </div>
 
-  <!-- Formulaires questions -->
+  <!-- Formulaires questions 
   <form (ngSubmit)="addQuestion()">
     <h3>Formulaire question</h3>
     <div class="row">
@@ -172,7 +172,6 @@
     <div class="clearfix"></div>
   </form>
 
-  <!-- Table questions étudiants -->
   <div class="row  mb-5">
     <div class="col">
       <div class="card shadow">
@@ -233,4 +232,5 @@
       </div>
     </div>
   </div>
+  -->
 </div>
